@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-19T16:06:39Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-08-20T00:31:35Z",
+  "count" : 18,
+  "count_minmax" : [ 3, 18 ],
+  "count_decinc" : [ -0, +18 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
