@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-19T16:06:39Z",
+  "timestamp" : "2023-08-20T00:31:35Z",
   "count_outdated" : 1461,
   "uniques_outdated" : 544,
-  "count" : 1569,
-  "uniques" : 567,
+  "count" : 1583,
+  "uniques" : 568,
   "views" : [
     {
       "timestamp": "2023-08-06T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-19T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 18,
+      "count_minmax": [ 3, 18 ],
+      "count_decinc": [ 0, 18 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
