@@ -1,6 +1,6 @@
 {
-  "count": 108,
-  "uniques": 20,
+  "count": 122,
+  "uniques": 21,
   "views": [
     {
       "timestamp": "2023-08-06T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2023-08-19T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 18,
+      "uniques": 3
     }
   ]
 }
