@@ -1,3 +1,12 @@
+2023-08-20T00:31:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5914340430 # 1834
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
+* notice: last 14d: unq all: 21 122
+* notice: prev accum: outdated-unq outdated-all / unq all: 544 1461 / 567 1569
+* notice: next accum: outdated-unq outdated-all / unq all: 544 1461 / 568 1583
+* notice: prev exec diff / last date diff / accum: unq all: +1 +14 -0 -0 / +3 +18 -0 -0 / 3 18
+* notice: removed / changed dates: [] / [2023-08-19]
+
 2023-08-19T16:06:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5912336642 # 1833
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
